Updted the index page to a split screen format. Uploaded two background images.

--- a/stylesheets/blog_stylesheet (ubuntu's conflicted copy 2016-12-05).css
+++ b/stylesheets/blog_stylesheet (ubuntu's conflicted copy 2016-12-05).css
@@ -60,10 +60,7 @@ a:hover{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  display: inline-block;
-  float: left;
-  padding: 0px;
-  margin: 0px;
+  display: inline-block;;
 }
 
 #right-panel{
@@ -73,10 +70,7 @@ a:hover{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  display: inline-block;
-  float: left;
-  padding: 0px;
-  margin: 0px;
+  display: inline-block                                                                                                                                                           ;
 }
 
 
