fixing spelling errors

--- a/stylesheets/blog_stylesheet.css
+++ b/stylesheets/blog_stylesheet.css
@@ -102,7 +102,7 @@ h3{
   color: white;
   letter-spacing: .05em;
   text-align: center;
-  padding: 1em;
+  padding: 0em 1em 0.5em 1em;
 }
 
 #made-by{
