--- a/stylesheets/blog_stylesheet.css
+++ b/stylesheets/blog_stylesheet.css
@@ -13,8 +13,42 @@ h3{
   letter-spacing: .05em!important;
 }
 
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+a:visited{
+  color: inherit;
+}
+
 
 /* CLASS STYLING */
+
+.bold{
+  font-weight: bold;
+}
+
+.desktop-navigation-container{
+  display: none;
+}
+
+.desktop-navigation-container ul{
+  list-style: none;
+  display: flex;
+  margin-right: 5em;
+  padding-top: .8em;
+}
+
+.desktop-navigation-container li{
+  color: white;
+  padding: 0px 0.8em;
+  font-size: 1.2em;
+}
+
+.desktop-navigation-container a:hover{
+  color: #FF2AB0;
+}
 
 .hero-button{
   background-color: #FF2AB0!important;
@@ -50,6 +84,7 @@ h3{
   font-size: 2em;
   letter-spacing: .08em;
   text-align: center;
+  width: 100%;
 }
 
 .section-container{
@@ -69,7 +104,7 @@ h3{
 #about-text-container{
   text-align: center;
   letter-spacing: .05em;
-  padding: 0em 1.5em 3em 1.5em;
+  padding: 2em 1.5em 2em 1.5em;
 }
 
 #contact-container{
@@ -151,12 +186,9 @@ h3{
   }
 
   #about-text-container{
-    padding: 0em 2em 3em 2em
+    padding: 0em 3em 2em 3em;
   }
 }
-
-
-
 
 @media screen and (min-width: 750px){
   .six.columns {
@@ -164,8 +196,13 @@ h3{
     padding-top: 13%;
   }
 
+  #about-text-container{
+    text-align: left;
+    padding: 0em 0em 2em 1.5em;
+  }
+
   #into-text{
-    font-size: 1.3em;
+    font-size: 1.15em;
   }
 
   #me-image{
@@ -173,15 +210,40 @@ h3{
     max-width: 30em;
   }
 
-  #welcome-wrapper{
-    height: 70%
+  #welcome-text{
+    font-size: 5em;
   }
+
+
 }
 
 @media screen and (min-width: 800px){
+
+  .desktop-navigation-container{
+    display: block;
+  }
+
+  .desktop-navigation-container ul{
+    margin-right: 2em;
+  }
+
+  .name-container{
+    text-align: left;
+    margin-left: 2em;
+  }
+
   .six.columns {
     padding-top: 5%
   }
+
+  #me-image{
+    padding-top: 3em
+  }
+
+  #welcome-wrapper{
+    height: 45em;
+  }
+
 }
 
 @media screen and (min-width: 986px){
@@ -189,4 +251,13 @@ h3{
     width: 48%!important;
     padding-top: 0%;
   }
+
+  .name-container{
+    margin-left: 3em;
+  }
+
+  .desktop-navigation-container ul{
+    margin-right: 3em;
+  }
+
 }
