added image to blog page. Fixed spelling errors for technical blog 3

--- a/stylesheets/blog_stylesheet.css
+++ b/stylesheets/blog_stylesheet.css
@@ -161,6 +161,11 @@ a:visited{
   margin-top: 2em;
 }
 
+#blog-hero-image{
+  width: 100%;
+  max-width: 1000px;
+}
+
 #blog-post-list{
   font-size: 1.2em;
 }
