--- a/projects/colourKakapo/stylesheets/scss.scss
+++ b/projects/colourKakapo/stylesheets/scss.scss
@@ -72,7 +72,13 @@ ul{
 
 #kakapo-svg{
   cursor: pointer;
-  webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 #swatch-container{
