--- a/projects/colourKakapo/stylesheets/scss.scss
+++ b/projects/colourKakapo/stylesheets/scss.scss
@@ -68,6 +68,13 @@ ul{
   width: 90%;
   max-width: 500px;
   margin: 1em auto;
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 #kakapo-svg{
