improved mobile responsiveness. Added paintbrush to swatch

--- a/projects/colourKakapo/stylesheets/scss.scss
+++ b/projects/colourKakapo/stylesheets/scss.scss
@@ -15,6 +15,7 @@ body{
 
 ul{
   list-style: none;
+  padding: 0px;
 }
 
 .color{
@@ -22,15 +23,25 @@ ul{
   height: 2em;
   margin-bottom: 0.5em;
   border: 0.1em solid black;
+  border-radius: 10%;
   box-sizing: border-box;
   cursor: pointer;
 }
 
-.selected{
-  border: 0.2em solid gold;
+.color-swatch-row{
+  display: flex;
+  margin: 0px auto;
 }
 
+.selected{
+  border: 0.2em solid gold;
+  text-align: center;
+  padding-top: 0.25em;
+}
 
+.fa-paint-brush{
+  color: black;
+}
 
 #page-container{
   width: 100%;
@@ -47,8 +58,8 @@ ul{
   text-align: center;
   background-color: #008080;
   padding: 0.5em 0em;
-  border-top: 0.1em solid #FF1493;
-  border-bottom:  0.1em solid #FF1493;
+  border-top: 0.2em solid #FF1493;
+  border-bottom:  0.2em solid #FF1493;
 }
 
 #into-text{
@@ -80,8 +91,8 @@ ul{
   max-width: 330px;
   margin: 1em auto;
   background-color: white;
-  border: 0.15em solid #FF1493;
-
+  border: 0.2em solid #FF1493;
+  border-radius: 3%;
 }
 
 #made-by{
